--- a/ipython/02-WordCloud.ipynb
+++ b/ipython/02-WordCloud.ipynb
@@ -48,7 +48,9 @@
     "import matplotlib.pyplot as plt\n",
     "from wordcloud import WordCloud\n",
     "from nltk import FreqDist\n",
-    "from nltk.tokenize import word_tokenize"
+    "from nltk.tokenize import word_tokenize\n",
+    "import nltk\n",
+    "nltk.download('punkt')"
    ]
   },
   {
@@ -68,8 +70,8 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "plt.figure(figsize=(12,12))\n",
     "wcloud = WordCloud(font_file).generate(texts)\n",
+    "plt.figure(figsize=(12,12))\n",
     "plt.imshow(wcloud)\n",
     "plt.axis(\"off\")"
    ]
