--- a/01-Token_Note.ipynb
+++ b/01-Token_Note.ipynb
@@ -18,13 +18,7 @@
    "source": [
     "! apt-get update\n",
     "! apt-get install g++ openjdk-8-jdk \n",
-    "! pip3  install  nltk konlpy wordcloud matplotlib gensim \n",
-    "\n",
-    "! apt-get install fonts-nanum*\n",
-    "! apt-get install fontconfig\n",
-    "! fc-cache -fv\n",
-    "! cp /usr/share/fonts/truetype/nanum/Nanum* /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/\n",
-    "! rm -rf /content/.cache/matplotlib/*"
+    "! pip3 install nltk konlpy"
    ]
   },
   {
@@ -38,19 +32,10 @@
     "nltk.download('tagsets')\n",
     "nltk.download('averaged_perceptron_tagger')\n",
     "\n",
-    "speech_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/pyongyang_fin.txt\"\n",
-    "script_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/movie_memories_of_murder_2003.txt\"\n",
-    "font_file = \"/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/NanumGothicCoding.ttf\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = \"\"\"갤럭시(GalaxyNote9)노트9. 2018년 08월 폭발적인 인기를 이끌고 있습니다. \n",
-    "담당자 010-222-9999. 홍보팀 010-8888-9999\"\"\""
+    "text_eng  = \" Don't hesitate to ask questions\"\n",
+    "text_kor  = \"\"\"삼성 갤럭시(GalaxyNote)노트의 신형을 홍보 합니다. \n",
+    "홍보:유관순 010-8888-9999.\n",
+    "삼성 페이지 https://www.samsung.com/sec/index.html\"\"\""
    ]
   }
  ],
