--- a/02-WordCloud_Note.ipynb
+++ b/02-WordCloud_Note.ipynb
@@ -17,13 +17,14 @@
    "source": [
     "! apt-get update\n",
     "! apt-get install g++ openjdk-8-jdk \n",
-    "! pip3  install  nltk konlpy wordcloud matplotlib gensim \n",
+    "! pip3 install nltk konlpy wordcloud matplotlib\n",
     "\n",
-    "! apt-get install fonts-nanum*\n",
+    "! apt-get install fonts-nanum-coding\n",
     "! apt-get install fontconfig\n",
     "! fc-cache -fv\n",
     "! cp /usr/share/fonts/truetype/nanum/Nanum* /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/\n",
-    "! rm -rf /content/.cache/matplotlib/*"
+    "! rm -rf /content/.cache/matplotlib/*\n",
+    "! ls /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/Nanum*.ttf"
    ]
   },
   {
@@ -33,8 +34,7 @@
    "outputs": [],
    "source": [
     "speech_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/pyongyang_fin.txt\"\n",
-    "script_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/movie_memories_of_murder_2003.txt\"\n",
-    "font_file = \"/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/NanumGothicCoding.ttf\""
+    "font_file   = \"/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/NanumGothicCoding.ttf\""
    ]
   }
  ],
