--- a/03-Word2Vec_Note.ipynb
+++ b/03-Word2Vec_Note.ipynb
@@ -21,7 +21,7 @@
     "! apt-get install g++ openjdk-8-jdk \n",
     "! pip3  install  nltk konlpy wordcloud matplotlib gensim \n",
     "\n",
-    "! apt-get install fonts-nanum*\n",
+    "! apt-get install fonts-nanum-coding\n",
     "! apt-get install fontconfig\n",
     "! fc-cache -fv\n",
     "! cp /usr/share/fonts/truetype/nanum/Nanum* /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/\n",
@@ -34,9 +34,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "speech_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/pyongyang_fin.txt\"\n",
     "script_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/movie_memories_of_murder_2003.txt\"\n",
-    "font_file = \"/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/NanumGothicCoding.ttf\""
+    "font_file   = \"/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/NanumGothicCoding.ttf\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline  \n",
+    "import matplotlib as mpl        \n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.font_manager as fm\n",
+    "font_name   = fm.FontProperties(fname=font_file, size=10).get_name()\n",
+    "plt.rc('font', family=font_name)\n",
+    "fm._rebuild()\n",
+    "mpl.rcParams['axes.unicode_minus'] = False"
    ]
   },
   {
