--- a/ipython/01-Token.ipynb
+++ b/ipython/01-Token.ipynb
@@ -16,15 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! apt-get update\n",
-    "! apt-get install g++ openjdk-8-jdk \n",
-    "! pip3  install  nltk konlpy wordcloud matplotlib gensim \n",
-    "\n",
-    "! apt-get install fonts-nanum*\n",
-    "! apt-get install fontconfig\n",
-    "! fc-cache -fv\n",
-    "! cp /usr/share/fonts/truetype/nanum/Nanum* /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/\n",
-    "! rm -rf /content/.cache/matplotlib/*"
+    "# ! apt-get update\n",
+    "# ! apt-get install g++ openjdk-8-jdk \n",
+    "# ! pip3  install  nltk konlpy wordcloud matplotlib gensim "
    ]
   },
   {
@@ -34,13 +28,13 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "nltk.download('punkt')\n",
-    "nltk.download('tagsets')\n",
-    "nltk.download('averaged_perceptron_tagger')\n",
-    "\n",
-    "speech_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/pyongyang_fin.txt\"\n",
-    "script_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/movie_memories_of_murder_2003.txt\"\n",
-    "font_file = \"/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/NanumGothicCoding.ttf\""
+    "# nltk.download('punkt')\n",
+    "# nltk.download('tagsets')\n",
+    "# nltk.download('averaged_perceptron_tagger')\n",
+    "text_eng  = \" Don't hesitate to ask questions\"\n",
+    "text_kor  = \"\"\"삼성 갤럭시(GalaxyNote)노트의 신형을 홍보 합니다. \n",
+    "홍보:유관순 010-8888-9999.\n",
+    "삼성 페이지 https://www.samsung.com/sec/index.html\"\"\""
    ]
   },
   {
@@ -49,8 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"\"\"갤럭시(GalaxyNote9)노트9. 2018년 08월 폭발적인 인기를 이끌고 있습니다. \n",
-    "담당자 010-222-9999. 홍보팀 010-8888-9999\"\"\""
+    "text_kor"
    ]
   },
   {
@@ -60,7 +53,7 @@
    "outputs": [],
    "source": [
     "from nltk import sent_tokenize, word_tokenize, FreqDist\n",
-    "sent_tokenize(text)"
+    "sent_tokenize(text_kor)"
    ]
   },
   {
@@ -69,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokens = word_tokenize(text)\n",
+    "tokens = word_tokenize(text_kor)\n",
     "tokens"
    ]
   },
@@ -89,7 +82,8 @@
    "metadata": {},
    "source": [
     "<br></br>\n",
-    "## **Re 를 사용한 Regex 정규식**"
+    "## **Re 를 사용한 Regex 정규식**\n",
+    "https://news.v.daum.net/v/20190223110230553"
    ]
   },
   {
@@ -100,7 +94,7 @@
    "source": [
     "import re\n",
     "tokenizer = re.compile(r'[가-힣]+')\n",
-    "tokenizer.findall(text)"
+    "tokenizer.findall(text_kor)"
    ]
   },
   {
@@ -109,8 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer  = re.compile('\\d{3}-\\d{3,4}-\\d{4}')\n",
-    "tokenizer.findall(text)"
+    "tokenizer  = re.compile(r'\\d{3}-\\d{3,4}-\\d{4}')\n",
+    "tokenizer.findall(text_kor)"
    ]
   },
   {
@@ -120,7 +114,7 @@
    "outputs": [],
    "source": [
     "tokenizer = re.compile(r'[^ 가-힣]+')\n",
-    "tokenizer.findall(text)"
+    "tokenizer.findall(text_kor)"
    ]
   },
   {
@@ -129,7 +123,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer.sub(\"\", text).split(\" \")"
+    "tokenizer.sub(\"\", text_kor).split(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = re.compile(r'https://[w]{3}.[A-z]+.[A-z]+/')\n",
+    "tokenizer.findall(text_kor)"
    ]
   },
   {
@@ -147,11 +151,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text      = \" Don't hesitate to ask questions\"\n",
-    "\n",
+    "text_eng = text_eng.lower()\n",
+    "text_eng"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from nltk.tokenize import TreebankWordTokenizer\n",
     "tokenizer = TreebankWordTokenizer()\n",
-    "token     = tokenizer.tokenize(text)\n",
+    "token     = tokenizer.tokenize(text_eng)\n",
     "token"
    ]
   },
@@ -189,7 +201,7 @@
    "metadata": {},
    "source": [
     "<br></br>\n",
-    "# **Stemming / Tagging**\n",
+    "# **Stemming / Tagging (한글)**\n",
     "> **konlpy**"
    ]
   },
@@ -201,17 +213,9 @@
    "source": [
     "from konlpy.tag import Okt\n",
     "twitter = Okt()\n",
-    "twitter.pos('서울R&D캠퍼스 수업자료')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# Stemming\n",
-    "text = \"워런 버핏은 삼성전자가 아닌 애플주식을 왜 샀을까\"\n",
+    "text = \"파이썬을 활용하여 자연어 분석 특강입니다\"\n",
     "print(twitter.pos(text, stem=\"true\"))"
    ]
   },
