--- a/ipython/03-Word2Vec.ipynb
+++ b/ipython/03-Word2Vec.ipynb
@@ -5,10 +5,8 @@
    "metadata": {},
    "source": [
     "<img src=\"https://github.com/YongBeomKim/nltk_rnd/raw/master/data/test.jpg\">\n",
-    "\n",
-    "<br></br>\n",
+    "<br/>\n",
     "# **Project4 | word2vec**\n",
-    "<br></br>\n",
     "## **1 데이터 전처리**"
    ]
   },
@@ -18,15 +16,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! apt-get update\n",
-    "! apt-get install g++ openjdk-8-jdk \n",
-    "! pip3  install  nltk konlpy wordcloud matplotlib gensim \n",
+    "# ! apt-get update\n",
+    "# ! apt-get install g++ openjdk-8-jdk \n",
+    "# ! pip3  install  nltk konlpy matplotlib gensim \n",
     "\n",
-    "! apt-get install fonts-nanum*\n",
-    "! apt-get install fontconfig\n",
-    "! fc-cache -fv\n",
-    "! cp /usr/share/fonts/truetype/nanum/Nanum* /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/\n",
-    "! rm -rf /content/.cache/matplotlib/*"
+    "# ! apt-get install fonts-nanum-eco\n",
+    "# ! apt-get install fontconfig\n",
+    "# ! fc-cache -fv\n",
+    "# ! cp /usr/share/fonts/truetype/nanum/Nanum* /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/\n",
+    "# ! rm -rf /content/.cache/matplotlib/*"
    ]
   },
   {
@@ -37,7 +35,24 @@
    "source": [
     "speech_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/pyongyang_fin.txt\"\n",
     "script_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/movie_memories_of_murder_2003.txt\"\n",
-    "font_file = \"/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/NanumGothicCoding.ttf\""
+    "# font_file = \"/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/NanumGothicCoding.ttf\"\n",
+    "font_file = \"./D2Coding.ttf\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib as mpl        \n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.font_manager as fm\n",
+    "\n",
+    "font_name   = fm.FontProperties(fname=font_file, size=10).get_name()\n",
+    "plt.rc('font', family=font_name)\n",
+    "fm._rebuild()\n",
+    "mpl.rcParams['axes.unicode_minus'] = False"
    ]
   },
   {
@@ -49,6 +64,17 @@
     "# 텍스트를 줄단위로 끊어서 불러온뒤\n",
     "# Token 단위로, 한글명사들을 추출한다\n",
     "def txtnoun(sentences , skip=False, tags=['Noun'], stem=True, set_tokens=False):\n",
+    "\n",
+    "    r\"\"\"\n",
+    "    살인의 추억 대본의 텍스트 전처리 작업을 진행합니다\n",
+    "    :param sentences: 단일한 Text String 데이터를 입력합니다\n",
+    "    :param skip: 분류된 Token 중 사용자가 원하는 형태로 변환된 내용을 출력\n",
+    "    :param tags: konlpy 로 분류된 품사중 추출하고자 하는 품사를 정의합니다\n",
+    "    :param stem: stemming 작업여부를 정의합니다.\n",
+    "    :param set_tokens: return 결과를 token list 객체로 출력할지를 정의합니다\n",
+    "    :return: set_tokens 내용에 따라 List, String 타입으로 출력합니다\n",
+    "    \"\"\"\n",
+    "    \n",
     "    import re\n",
     "    from konlpy.tag import Okt\n",
     "    twitter = Okt()\n",
@@ -152,12 +178,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br/>\n",
+    "## **2 Word2Vec 모델의 활용**\n",
+    "모델을 활용하여 유력한 범인을 찾아보자!!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 저장된 학습모델파일 불러오기\n",
+    "from gensim.models import word2vec\n",
+    "model_file = \"script.model\"\n",
     "model = word2vec.Word2Vec.load(model_file)\n",
     "len(model.wv.vocab.keys())"
    ]
@@ -177,9 +214,7 @@
    "source": [
     "<br></br>\n",
     "## **4 Word2Vec 모델 내용 확인**\n",
-    "모델을 활용하여 유력한 범인을 찾아보자!!\n",
-    "\n",
-    "<img src=\"./data/test.jpg\" width='800'>"
+    "모델을 활용하여 유력한 범인을 찾아보자!!"
    ]
   },
   {
@@ -199,7 +234,7 @@
    "outputs": [],
    "source": [
     "# 현장과 가장 가깝게 등장한 인물이 1명 등장\n",
-    "model.wv.most_similar('현장', topn=30)"
+    "model.wv.most_similar('현장', topn=10)"
    ]
   },
   {
@@ -209,7 +244,17 @@
    "outputs": [],
    "source": [
     "# 현장 과 백광호 와 밀접한 증거들 중에 방해가 되는 내용을 찾는다\n",
-    "model.wv.most_similar(['현장','백광호'], topn=20)"
+    "model.wv.most_similar(['현장','이향숙'], topn=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 현장 과 백광호 와 밀접한 증거들 중에 방해가 되는 내용을 찾는다\n",
+    "model.wv.most_similar(['현장','백광호'], topn=10)"
    ]
   },
   {
@@ -220,7 +265,18 @@
    "source": [
     "# 현장 과 백광호 와 밀접한 증거들 중에 '참깨밭' 이 계속 방해가 됨\n",
     "# 참깨밭에 백광호가 밀접하게 연결되어 있어서 이를 제외한 분석이 필요\n",
-    "model.wv.most_similar(['현장','백광호'], negative=['참깨밭'], topn=20)"
+    "model.wv.most_similar(['현장','백광호'], negative=['참깨밭'], topn=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 현장 과 백광호 와 밀접한 증거들 중에 '참깨밭' 이 계속 방해가 됨\n",
+    "# 참깨밭에 백광호와 이향숙을 제외한 분석이 필요\n",
+    "model.wv.most_similar(['현장','백광호'], negative=['참깨밭','이향숙'], topn=15)"
    ]
   },
   {
@@ -273,10 +329,6 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import matplotlib\n",
-    "matplotlib.font_manager._rebuild()\n",
-    "matplotlib.rc('font', family='NanumGothic')\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "fig  = plt.figure(figsize=(12,12))\n",
     "ax  = fig.add_subplot(1, 1, 1)\n",
