--- a/ipython/02-WordCloud.ipynb
+++ b/ipython/02-WordCloud.ipynb
@@ -15,15 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! apt-get update\n",
-    "! apt-get install g++ openjdk-8-jdk \n",
-    "! pip3  install  nltk konlpy wordcloud matplotlib gensim \n",
+    "# ! apt-get update\n",
+    "# ! apt-get install g++ openjdk-8-jdk \n",
+    "# ! pip3  install  nltk konlpy wordcloud matplotlib gensim \n",
     "\n",
-    "! apt-get install fonts-nanum*\n",
-    "! apt-get install fontconfig\n",
-    "! fc-cache -fv\n",
-    "! cp /usr/share/fonts/truetype/nanum/Nanum* /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/\n",
-    "! rm -rf /content/.cache/matplotlib/*"
+    "# ! apt-get install fonts-nanum*\n",
+    "# ! apt-get install fontconfig\n",
+    "# ! fc-cache -fv\n",
+    "# ! cp /usr/share/fonts/truetype/nanum/Nanum* /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/\n",
+    "# ! rm -rf /content/.cache/matplotlib/*"
    ]
   },
   {
@@ -34,7 +34,8 @@
    "source": [
     "speech_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/pyongyang_fin.txt\"\n",
     "script_text = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/movie_memories_of_murder_2003.txt\"\n",
-    "font_file = \"/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/NanumGothicCoding.ttf\""
+    "# font_file = \"/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/NanumGothicCoding.ttf\"\n",
+    "font_file = \"./D2Coding.ttf\""
    ]
   },
   {
@@ -92,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br></br>\n",
+    "<br/>\n",
     "## **명사만 추출하여 Wordcloud 만들기**"
    ]
   },
@@ -102,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "texts[:100]"
+    "texts[:200]"
    ]
   },
   {
