--- a/01-Token_Note.ipynb
+++ b/01-Token_Note.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Chapter 2 자연어 분석**\n",
-    "\n",
+    "# **Chapter 1 자연어 분석 기초**\n",
     "## **Token**\n",
-    "어휘분석"
+    "단어 다루기"
    ]
   },
   {
